Bug 39118 - Charts with anchor to cell do not update automatically
Summary: Charts with anchor to cell do not update automatically
Status: RESOLVED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Chart (show other bugs)
Version:
(earliest affected)
3.4.1 release
Hardware: x86-64 (AMD64) All
: medium normal
Assignee: Kohei Yoshida
URL:
Whiteboard: target:3.6 target:3.5 target:3.4.6
Keywords:
: 43472 45353 (view as bug list)
Depends on:
Blocks: mab3.4
  Show dependency treegraph
 
Reported: 2011-07-10 10:40 UTC by Matt
Modified: 2012-01-28 22:54 UTC (History)
8 users (show)

See Also:
Crash report or crash signature:


Attachments
Spreadsheet with chart that does not auto-update in LibO 3.4 (121.84 KB, application/vnd.oasis.opendocument.spreadsheet)
2011-07-11 04:19 UTC, Matt
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Matt 2011-07-10 10:40:34 UTC
Charts created in versions of Calc 3.3 or earlier (?) do not update when data is changed UNLESS the chart has already been activated by editing during the current session.

Steps to reproduce:

1) Open an ODS spreadsheet created using LibO 3.3 or OOo, containing one or more charts.
2) Change values in cells in the data ranges displayed by one or more charts.

Actual result:
The chart does not update.

Expected result:
The chart should auto-update each time its data is changed.

Build: LibreOffice 3.4.1 OOO340m1 (Build:103)
Platform: Windows 7 64-bit

Additional information:
If the chart is double-clicked, or altered directly such as by dragging to a new position, that chart then updates thereafter until the document is closed and reopened.

The problem does not seem to occur with new ODS documents created in LibO 3.4. The new ODS charts do not seem to have the "anchor" icon in the cell at the top left corner, which is present in older documents. Charts with the "anchor" seem to be the ones that do not auto-update. There does not seem to be a way to convert old charts/documents to lose the "anchor".
Comment 1 Matt 2011-07-10 11:23:10 UTC
The chart does not update even if the document is closed and reopened - there is no update until the chart is activated by double-clicking it (beginning to edit it). This means that in a spreadsheet with many charts, each and every chart must be double-clicked to be updated. There is no way to notice that the chart has not been updated unless the user knows about the bug or notices that the chart does not match the data.
Comment 2 Matt 2011-07-10 11:49:14 UTC
The pattern of which documents have charts which do not auto-update is unclear. I have found an older spreadsheet with "anchors" that does auto-update. However, I have many spreadsheets with various chart types that do not auto-update any more. Note: these charts did auto update in LibO 3.3 and OOo.
Comment 3 Jeffrey 2011-07-10 18:56:10 UTC
Hi Matt,

Thanks for the thorough information. I have tried to reproduce this on LibreOffice 3.4  340m1(Build:12) on OpenSuse KDE, but I cannot seem to detect a bug.

I am almost sure this bug affects all charts, but can you confirm it?

I have tried using both a scatter and area chart, and when I close the session and then update the data, the charts get automatically updated. I do not see an anchor in the top left cell/corner.

Granted, I know that you said it is hard to pinpoint which cases in which this bug will occur, so I am just providing info. Hope it helps.
Comment 4 Rainer Bielefeld Retired 2011-07-10 22:59:59 UTC
I also see that with "LibreOffice 3.4.1  - WIN7  Home Premium (64bit) German UI [OOO340m1 (Build:103)]" (and more early version) for particular charts, but not as a general problem. For me also <f9> updates the charts.

@Matt
Can you contribute a sample document?
Comment 5 Matt 2011-07-11 04:19:43 UTC
Created attachment 48965 [details]
Spreadsheet with chart that does not auto-update in LibO 3.4

This sheet has been edited so cells B4:B13 all contain the value 400 which is not shown in the chart (previous values, all <320). The chart still shows the old values when I load this document, and does not update when I change values.

Pressing F9 or editing the chart activates the chart and further data changes are auto-updated until the sheet is closed (saved) and reopened.
Comment 6 Matt 2011-07-11 04:48:06 UTC
@Jeffrey: I use Column and XY(scatter) chart types. I have seen this bug with possibly all charts created prior to LibO 3.4, irrespecive of chart type. I thought I had one that did auto-update, but today it does not. I think the "anchor" differentiates the behaviour.

@Rainer: Thanks for pointing out <f9> - that helps a lot, though of course charts are supposed to auto-update and will mislead users otherwise.

A side question: when right clicking a chart (not currently being edited), did the context menu previously contain an "Edit" option? Was it always necessary to double-click to edit a chart?
Comment 7 Rainer Bielefeld Retired 2011-07-11 05:09:41 UTC
Reproducible with "LibreOffice 3.4.1  - WIN7  Home Premium (64bit) German UI
[OOO340m1 (Build:103)]". Indeed, the anchor makes the difference (after close / reopen). I checked several of my spreadsheets with charts, those having the problem all have "Chart anchor to cell"

Vague suspect: DUP of or related to "Bug 38545 - Cell anchor symbol does not get refreshed when the anchoring type changes"?

@Kohei:
Please feel free to reassign if it’s not your area
Comment 8 Brian Doe 2011-10-16 10:01:21 UTC
I am also affected by this bug, running LibreOffice 3.4.2 Build 1206 on OpenSUSE 12.1. It happens when the chart is anchored to cell, and is fixed by anchoring the chart to the page. It seems to be independent of whether or not the anchor icon shows up, because I made the icon show up when I toggled from "anchor to page" to "anchor to cell" and then back to "anchor to page" again, but chart would only auto-update when anchored to page, unless chart has been previously activated by double-clicking it or editing its properties.
Comment 9 Rainer Bielefeld Retired 2011-12-03 08:48:38 UTC
Modify OS due to Comment 8
Comment 10 Rainer Bielefeld Retired 2011-12-03 08:49:37 UTC
*** Bug 43472 has been marked as a duplicate of this bug. ***
Comment 11 Kohei Yoshida 2011-12-13 21:38:03 UTC
Just fixed this on master

http://cgit.freedesktop.org/libreoffice/core/commit/?id=681e8b1e43c1949871463934fa92396c00110270

The fix is also cherry-picked to the 3.5 branch, so I think Beta2 will have this fix in.
Comment 12 Cor Nouws 2012-01-11 02:25:02 UTC
has not been integrated in 3.4.5 :-(
Comment 13 Cor Nouws 2012-01-13 14:22:29 UTC
I guess fixing in 3.4.6 too would be highly practical for (prof.) users and appreciated ..
(sorry that these issues have not surfaced faster, but that does not prove that they are not annoying etc. etc.)
Comment 14 Kohei Yoshida 2012-01-13 14:26:30 UTC
Cor, please ask someone to sign off of my change.  I can't backport my own change. Thanks.
Comment 15 Korrawit Pruegsanusak 2012-01-16 05:57:17 UTC
Eike has just backport this to -3-4 => will be in 3.4.6 => update whiteboard & mark as fixed

http://cgit.freedesktop.org/libreoffice/calc/commit/?h=libreoffice-3-4&id=99484e05a48f6253ebbbb1ff4fd2e8cc80cdbe5d
Comment 16 vitriol 2012-01-28 22:54:41 UTC
*** Bug 45353 has been marked as a duplicate of this bug. ***