fdo#39118: Fixed chart listener registration during ODS import.

The breakage was due to the drawing layer re-work.  We do need to store
charts (or all OLE shapes with associated listening ranges) for later
registration regardless of anchor types.